<resources>
    <string name="app_name">Drug Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_drug">Add drug</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drug_name">Drug name</string>
    <string name="descrption">Description</string>
    <string name="details">Drug details</string>
    <string name="delete">Delete</string>
    <string name="add_time">Schedule time</string>
    <string name="add_time_title">Schedule time for Sample Drug</string>
</resources>
