<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gcode.drugtracker.AddDrug"
    android:background="@android:color/holo_blue_bright">

    <EditText
        android:id="@+id/formName"
        android:layout_height="wrap_content"
        android:hint="@string/drug_name"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent">
    </EditText>

    <EditText
        android:id="@+id/formDescription"
        android:layout_height="wrap_content"
        android:hint="@string/descrption"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_below="@+id/formName"
        android:layout_alignParentStart="true">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_drug"
        android:id="@+id/addDrugFormButton"
        android:onClick="addDrug"
        android:layout_below="@+id/formDescription"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp" />

</RelativeLayout>
